# aoc2022

./: .gitignore  LICENSE  README.md  pyproject.toml
src/aoc2022/: dec_1.py  dec_10.py  dec_11.py  dec_12.py  dec_13.py  dec_14.py  dec_15.py  dec_2.py  dec_3.py  dec_4.py  dec_5.py  dec_6.py  dec_7.py  dec_8.py  dec_9.py
tests/: test_dec_12.py  test_dec_13.py  test_dec_9.py  test_sampl.py
